<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="nome">Nome :</string>
	<string name="email">Email: </string>
	<string name="fone">Fone</string>
	<string name="data_nacimento">Data de Nacimento</string>
	<string name="cpf">CPF</string>
	<string name="inadimplente">Inadiplete</string>
	
	
    <string name="hello">Hello World, TccActivity!</string>
    <string name="app_name">SyncDataBase</string>
    <string name="title_activity_importacao">Importacão</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world"></string>
    <string name="title_activity_exportacao">Exportação</string>
    <string name="title_activity_alerta">AlertaActivity</string>
    <string name="title_activity_sua_aplicacao">SuaAplicacaoActivity</string>
    <string name="title_activity_listar_tabelas">ListarTabelasActivity</string>
    <string name="title_activity_editar_registro">EditarRegistroActivity</string>
    <string name="title_activity_inserir_tabela">InserirTabelaActivity</string>

</resources>